[package]
name = "que-pasa"
version = "0.1.0"
authors = ["Rick Klomp <rick.klomp@tzconnect.com>"]
edition = "2018"

[build-dependencies]

[dev-dependencies]
pretty_assertions = "*"

[dependencies]
serde_yaml = "0.8.20"
backoff = "0.3.0"
reqwest = { version = "0.11.4", features = ["blocking"] }
flume = "0.10.8"
anyhow = "1.0"
atty = "0.2.14"
backtrace = "*"
bs58 = { version = "0.4.0", features = ["check"] }
chrono = { version = "0.4", features = ["serde"] }
clap = "2.33.3"
curl = "0.4.36"
dotenv = "0.15.0"
env_logger = "0.8.3"
hex = "0.3.0"
indicatif = "0.16.0"
itertools = "*"
json = "0.12.4"
lazy_static = "1.4.0"
log = "0.4.0"
native-tls = "0.2.7"
num = { version = "0.4", features = [ "serde" ] }
postgres = { version = "0.19.1", features = [ "with-chrono-0_4" ] }
postgres-native-tls = "0.5.0"
pg_bigdecimal = { version = "0.1.1", features = ["serde"] }
regex = "1.4.5"
ron = "0.6.4"
serde = { version = "1.0.125", features = [ "derive" ] }
serde_derive = "1.0.125"
serde_json = "1.0.64"