[package]
name = "que-pasa"
version = "1.2.1"
authors = ["Rick Klomp <rick.klomp@tzconnect.com>"]
edition = "2018"

[build-dependencies]

[dev-dependencies]
pretty_assertions = "*"

[dependencies]
askama = "0.10"
serde_yaml = "0.8.20"
backoff = "0.3.0"
reqwest = { version = "0.11.4", features = ["blocking"] }
flume = "0.10.8"
anyhow = { version = "1.0", features = ["backtrace"] }
atty = "0.2.14"
backtrace = "*"
bs58 = { version = "0.4.0", features = ["check"] }
chrono = { version = "0.4", features = ["serde"] }
duration-str = { version = "0.3.9", features = ["chrono"] }
clap = "2.33.3"
r2d2_postgres = "0.18.1"
r2d2 = "0.8.9"
curl = "0.4.36"
env_logger = "0.8.3"
hex = "0.3.0"
indicatif = "0.16.0"
itertools = "*"
lazy_static = "1.4.0"
log = "0.4.0"
num = { version = "0.4", features = ["serde"] }
postgres = { version = "0.19.2", features = ["with-chrono-0_4", "with-serde_json-1"] }
postgres-types = { version = "0.2.2", features = ["derive"] }
postgres-native-tls = "0.5.0"
pg_bigdecimal = { version = "0.1.1", features = ["serde"] }
regex = "1.4.5"
ron = "0.6.4"
serde = { version = "1.0.125", features = ["derive"] }
serde_derive = "1.0.125"
serde_json = { version = "1.0.64", features = ["unbounded_depth"] }
serde_stacker = "0.1.4"
thiserror = "1.0"
smart-default = "0.6.0"

[features]
regression_force_update_derived = []
